--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-/* App.css */
+/* App.css
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+} */
+
 body {
   background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%);
   min-height: 100vh;
